--- a/style/style.css
+++ b/style/style.css
@@ -268,11 +268,33 @@ p {
 }
 
 .div__contacto {
-  grid-area: contacto;
+  /* grid-area: contacto;
+  */
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  background-color: rgb(255, 203, 59);
+  border-radius: 1rem;
+  z-index: 200;
+  box-shadow: 0px 0px 4px 1px rgb(168, 168, 168);
+}
+
+.div__contacto-fakeheader {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5rem;
+  background-color: #eee;
+  padding-bottom: 1rem;
+  border-radius: 1rem 1rem 0 0;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  padding: 3rem;
+  height: 20rem;
 }
 
 footer {
