--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 .body__background {
-  background-image: url(/img/background.jpg);
+  background-image: url(../img/background.jpg);
   background-attachment: fixed;
 
   object-fit: scale-down;
@@ -128,7 +128,7 @@ header {
   padding: 1rem;
 }
 
-li {
+.ul__navbar > li {
   padding: 0 1rem;
 }
 
@@ -185,7 +185,8 @@ p {
   color: rgb(51, 51, 51);
 }
 
-.div__skills {
+.div__skills,
+.div__formacion {
   grid-area: skills;
   display: flex;
   flex-direction: column;
@@ -194,53 +195,74 @@ p {
   padding: 2rem 0 2rem 0;
 }
 
-.div__skills > h2 {
+.div__skills > h2,
+.div__formacion > h3 {
   margin-bottom: 2rem;
 }
 
-.ul__skills-lista {
+.ul__skills-lista,
+.ul__formacion-lista {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
+  width: 80%;
+  margin: 1rem 0rem;
 }
 
-.li__item-skill {
+.ul__formacion-lista {
+  flex-direction: row-reverse;
+}
+
+.li__item-skill,
+.li__item-formacion {
   display: flex;
   flex-direction: column;
-  margin: 2rem 0;
   gap: 30px;
   background-color: rgb(255, 255, 255);
   box-shadow: 3px 3px 1px 1px pink;
   flex-grow: 1;
   color: rgb(78, 14, 14);
   align-items: center;
+  justify-content: center;
   transition: ease-in-out 200ms;
+  margin-left: 2rem;
+  width: 10%;
+  padding: 1rem 1rem;
+  width: 10%;
+  text-align: center;
 }
 
-#css {
-  margin: 0 1rem 0 2rem;
-}
-
-#js {
-  margin: 0 2rem 0 1rem;
-}
-
-.li__item-skill:hover {
+.li__item-skill:hover,
+.li__item-formacion:hover {
   background-color: rgb(253, 220, 225);
   transition: ease-in-out 200ms;
   box-shadow: -3px -3px 1px 1px pink;
 }
 
-.img__skill {
+.img__skill,
+.img__skill-cuadrado {
   width: 3rem;
   margin-bottom: 2rem;
   object-fit: cover;
   margin: 2rem 2rem;
 }
 
-.li__item-skill > h3 {
-  margin: 0 0 1rem 0;
+.img__formacion {
+  height: 7rem;
+  object-fit: contain;
+}
+.img__skill-cuadrado {
+  width: 3.5rem;
+}
+.li__item-skill > h3,
+.li__item-formacion > h3 {
+  font-weight: 800;
+  font-size: 1rem;
+}
+
+.li__item-skill > p,
+.li__item-formacion > p {
+  font-size: 1rem;
 }
 
 .div__hobbies {
@@ -265,6 +287,69 @@ p {
   justify-content: center;
   align-items: center;
   grid-area: proyectos;
+  margin-bottom: 8rem;
+}
+
+.ul__proyecto-lista {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.li__item-proyecto {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  margin: 2rem;
+  text-align: justify;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.37);
+}
+
+.li__item-proyecto > h3 {
+  font-size: 1.5rem;
+  margin-top: 1rem;
+}
+
+.li__item-proyecto > p {
+  font-size: 1rem;
+}
+
+.img__proyecto {
+  width: 50vw;
+  object-fit: contain;
+  border-bottom: solid rgba(0, 0, 0, 0.13);
+}
+
+.div__botonera-proyecto {
+  display: flex;
+  flex-direction: row;
+}
+
+.button__proyecto-demo,
+.button__proyecto-repo {
+  border: 1px solid rgb(255, 142, 246);
+  background-color: rgb(255, 255, 255);
+  color: rgb(255, 142, 246);
+  border-radius: 20px;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 8rem;
+  font-weight: 600;
+  transition: ease-in-out 200ms;
+}
+
+.button__proyecto-demo:hover,
+.button__proyecto-repo:hover {
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(255, 142, 246);
+  color: rgb(255, 255, 255);
+  /* border-radius: 20px; */
+  cursor: pointer;
+  transition: ease-in-out 200ms;
 }
 
 .div__contacto {
@@ -301,8 +386,21 @@ footer {
   grid-area: footer;
   background-color: pink;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
+  align-items: flex-start;
   border-radius: 0 0 1rem 1rem;
+  padding: 1% 0;
+}
+
+.div__footer-datos > h4 {
+  font-weight: 800;
+  padding-bottom: 2%;
+}
+
+.div__footer-datos > p,
+.footer__texto > p {
+  font-size: 1rem;
+  padding: 1% 0%;
 }
